Fixed overflow for mobile

--- a/style/style.css
+++ b/style/style.css
@@ -72,6 +72,7 @@ body{
     color: white;
     position: absolute;
     text-align: center;
+    text-overflow: clip;
     top: 40%;
     width: 100%;
     line-height: 0.4em;
